# bv_reports

./: .clang-format  .gitignore  CMakeLists.txt  UserSettingsContext.hpp  UserSettingsItem.hpp  UserSettingsItemModel.cpp  UserSettingsItemModel.hpp  UserSettingsViewModel.cpp  UserSettingsViewModel.hpp  _clang-format  conanfile.py  gen_static_resources.sh  main.cpp  main.qml  qml.qrc
application/: GraphicId.cpp  GraphicId.hpp  HeaderBarModel.cpp  HeaderBarModel.hpp  main.cpp
common/: BaseViewModel.cpp  BaseViewModel.hpp  Constants.cpp  Constants.hpp  ViewModelDependencies.cpp  ViewModelDependencies.hpp
firstUse/: FirstUseViewModel.cpp  FirstUseViewModel.hpp
mainWindow/: MainWindowViewModel.cpp  MainWindowViewModel.hpp
resources/: qml.qrc
resources/components/: ControlButton.qml  DropdownButton.qml  HeaderBar.qml  UserSettingsMenu.qml  UserSettingsValue.qml
resources/views/: FirstUse.qml  MainWindow.qml  UserSettings.qml  Welcome.qml  main.qml  userSettings.qml
userSettings/: UserSettingsContext.cpp  UserSettingsContext.hpp  UserSettingsItem.hpp  UserSettingsItemModel.cpp  UserSettingsItemModel.hpp  UserSettingsViewModel.cpp  UserSettingsViewModel.hpp
viewManagement/: ViewManager.cpp  ViewManager.hpp  ViewModelConfiguration.hpp  WindowConfiguration.hpp
